# RustScriptingFramework

./: .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: client.rs  config.rs  context.rs  events.rs  game.rs  lib.rs  message.rs  schedule.rs  script.rs  state.rs  ui.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/command/: clear.rs  connect.rs  exit.rs  help.rs  metrics.rs  mod.rs  ping.rs  reload.rs  scripts.rs
crates/cli/src/gui/: context.rs  mod.rs  status_bar.rs  theme.rs
crates/cli/src/gui/panels/: console.rs  mod.rs  scripts.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  management.rs  state.rs
crates/core/src/bus/: event_bus.rs  message_bus.rs  mod.rs
crates/core/src/loader/: local.rs  mod.rs  plugin.rs
crates/core/src/rpc/: client.rs  codec.rs  filters.rs  game_api.rs  metrics.rs  mod.rs  pipe.rs  protocol.rs  retry.rs  stream.rs
crates/core/src/runtime/: mod.rs  profiler.rs  runner.rs  runtime.rs  scheduler.rs
crates/example-script/: Cargo.toml
crates/example-script/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
