[package]
name = "bot-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "botwithus"
path = "src/main.rs"

[dependencies]
bot-api = { workspace = true }
bot-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
imgui = { workspace = true }
imgui-glow-renderer = { workspace = true }
imgui-winit-support = { workspace = true }
winit = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
glow = { workspace = true }
raw-window-handle = { workspace = true }
